--- a/WdServerLib/src/main/res/layout/activity_settings.xml
+++ b/WdServerLib/src/main/res/layout/activity_settings.xml
@@ -60,6 +60,7 @@
         tools:ignore="UseSwitchCompatOrMaterialXml" />
 
     <TextView
+        android:id="@+id/help_txt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
